--- a/package.json
+++ b/package.json
@@ -4,12 +4,13 @@
   "description": "Routing and middlewares with Express.js",
   "main": "app.js",
   "scripts": {
-    "test": "app.js"
+    "dev": "index.html"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "express": "^4.19.2",
     "nodemon": "^3.1.1"
   }
